# Hello-Academy

./: index.html  package-lock.json  package.json  postcss.config.js  tsconfig.json  vite.config.ts
public/src/: worker.worker.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/css/: global.css
src/components/layouts/attack-layout/: AttackLayout.tsx
src/components/layouts/general-layout/: GeneralLayout.tsx
src/components/structures/bf/bf-params/: BFParams.tsx
src/components/structures/console/: Console.tsx
src/components/structures/dos/dos-params/: DOSParams.tsx
src/components/structures/footer/: Footer.tsx
src/components/structures/titlebar/: Titlebar.tsx
src/components/structures/titlebar/action-btn/: ActionsBtn.tsx
src/components/structures/titlebar/app-info/: AppInfo.tsx
src/components/ui/buttons/icon-tooltip-btn/: IconTooltipBtn.tsx
src/components/ui/cards/attack-card/: AttackCard.module.scss  AttackCard.tsx
src/components/ui/titles/glow-title/: GlowTitle.module.css  GlowTitle.tsx
src/components/ui/triggers/attack-trigger/: AttackTrigger.module.css  AttackTrigger.tsx
src/hoc/attack-params-wrapper/: AttackParamsWrapper.tsx
src/hoc/main-wrapper/: MainWrapper.module.css  MainWrapper.tsx
src/hooks/useActions/: useActions.ts
src/routes/: index.tsx
src/store/: index.ts
src/store/attackSwitch/: attackSwitch.slice.ts
src/utils/: getTime.ts  makeReq.ts
src/views/bf/: BF.tsx
src/views/dos/: DOS.tsx
src/views/home/: Home.tsx
src/workers/: dos.ts
